@@ -36,6 +36,7 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
     and "unknown" for the version
   * /reloadall will now reload scripts in the same order they were loaded
   * Make xchat_send_modes available as Xchat::send_modes
+  * Add support for getting the network list using Xchat::get_list( "servers" )
 
 ------------------------------------------------------------------------------
  2.8.6 - 11/Jun/2008
